--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -64,6 +64,12 @@
 			margin: 0 auto;
 			position: relative;
 
+			@include breakpoint(medmax){
+				position: absolute;
+				left: 50%;
+				transform: translate(-50%,-50%);
+			}
+
 			.c-modal--footer{
 
 			}
